<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



<!--
    <Button
        android:id="@+id/back_button_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="120dp"
        android:layout_height="59dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="16dp"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:text="BACK"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />
-->


    <RelativeLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="@drawable/justbackground"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/profilepicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/cactus" />


        <TextView
            android:id="@+id/profileemailtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:layout_toRightOf="@+id/profilepicture"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/profilenametextupper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_toRightOf="@id/profilepicture"
            android:layout_below="@id/profileemailtext"
            android:layout_marginLeft="10dp" />


    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="E-mail"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_emailedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_outline_account_circle_24"
            android:text="E-mail" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Name"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_nameedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_outline_account_circle_24"
            android:text="User name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileaddresstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Address"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileaddressedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_outline_add_location_24"
            android:text="Address" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update"
        style="@style/Widget.MaterialComponents.Button">
    </Button>

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/colorPrimary"

        >
    </Button>



</LinearLayout>

    </LinearLayout>

</ScrollView>